Attempt fix because modal does not open on iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,8 +211,8 @@ card:hover {
     border-radius: 0.25em;
     border: 1px solid rgba(100, 100, 100, 0.3);
     box-shadow: 3px 3px 8px #222;
-    animation-name: modalopen;
-    animation-duration: 1s;
+    /* animation-name: modalopen;
+    animation-duration: 1s; */
 }
 
 
@@ -285,7 +285,7 @@ card:hover {
     }
 }
 
-@keyframes modalopen {
+/* @keyframes modalopen {
     from { opacity: 0};
     to {opacity: 1};
-}
+} */
